--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "axios": "^1.13.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
